feat: update project to JDK 25